Fix iPad / phone breakpoint overlap

--- a/portal/static/portal/sass/partials/_banners.scss
+++ b/portal/static/portal/sass/partials/_banners.scss
@@ -385,7 +385,7 @@
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 769px) {
   .banner__item,
   .button--banner__item {
     display: none;
