--- a/portal/static/portal/sass/partials/_header.scss
+++ b/portal/static/portal/sass/partials/_header.scss
@@ -126,7 +126,7 @@
 
 }
 
-@media (min-width: 768px) and (max-width: 1200px) {
+@media (min-width: 769px) and (max-width: 1200px) {
 
   .home-icon {
     display: none;
@@ -134,7 +134,7 @@
 
 }
 
-@media (min-width: 768px) and (max-width: 1400px) {
+@media (min-width: 769px) and (max-width: 1400px) {
 
   .menu__right-side {
     align-items: center;
@@ -149,7 +149,7 @@
 
 }
 
-@media (min-width: 768px) {
+@media (min-width: 769px) {
 
   .hamburger {
     display: none;
