--- a/portal/static/portal/sass/partials/_images.scss
+++ b/portal/static/portal/sass/partials/_images.scss
@@ -121,7 +121,7 @@ img {
   object-fit: contain;
 }
 
-@media (min-width: 768px) and (max-width: 1400px) {
+@media (min-width: 769px) and (max-width: 1400px) {
 
   .logo {
     margin-left: 1%;
@@ -135,7 +135,7 @@ img {
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 769px) {
 
   .logo {
     content: url('../img/logo_c4l_hexa.png');
