--- a/portal/static/portal/sass/partials/_onboarding.scss
+++ b/portal/static/portal/sass/partials/_onboarding.scss
@@ -120,7 +120,7 @@
 
 }
 
-@media (min-width: 768px) {
+@media (min-width: 769px) {
   .onboarding-step--done {
     background: $color-onboarding-step-done-background;
     border-bottom: 1px solid $color-background-secondary;
