--- a/portal/static/portal/sass/partials/_text.scss
+++ b/portal/static/portal/sass/partials/_text.scss
@@ -196,7 +196,7 @@ label {
   }
 }
 
-@media (min-width: 768px) and (max-width: 1036px) {
+@media (min-width: 769px) and (max-width: 1036px) {
   html {
     font-size: 8px;
   }
