--- a/portal/static/portal/sass/partials/_utils.scss
+++ b/portal/static/portal/sass/partials/_utils.scss
@@ -234,7 +234,7 @@ input.input-invalid {
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 769px) {
 
   .row--flex {
     display: flex;
