--- a/portal/static/portal/sass/styles.scss
+++ b/portal/static/portal/sass/styles.scss
@@ -16,7 +16,7 @@
 @import 'partials/utils';
 @import 'partials/videos';
 
-@media (min-width: 760px) {
+@media (min-width: 769px) {
   body {
     padding-top: 80px;
   }
